[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Title/Title.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ECG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/NewsreaderLarge.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/NewsreaderMedium.tres" type="DynamicFont" id=5]
[ext_resource path="res://CRT/CRTMaterial.tres" type="Material" id=6]
[ext_resource path="res://Sound/HeartbeatMainThemeRemastered.wav" type="AudioStream" id=7]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/SystemMain/Settings.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Music/TitleBGM.gd" type="Script" id=10]
[ext_resource path="res://Fonts/JMHTypewriterMedium.tres" type="DynamicFont" id=11]
[ext_resource path="res://Scripts/Music/Volume.gd" type="Script" id=12]
[ext_resource path="res://Sound/TypewriterSound.wav" type="AudioStream" id=13]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 5 )

[node name="Title" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="Grid" parent="Background" instance=ExtResource( 3 )]

[node name="ECG" parent="Background" instance=ExtResource( 2 )]
position = Vector2( 1280.07, 428.239 )

[node name="CRT" type="ColorRect" parent="Background"]
material = ExtResource( 6 )
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Start"]
margin_left = 46.819
margin_top = 360.0
margin_right = 616.819
margin_bottom = 443.0
custom_fonts/font = ExtResource( 4 )
text = "A Few Questions"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="Start"]
margin_left = 173.0
margin_top = 411.0
margin_right = 743.0
margin_bottom = 494.0
custom_fonts/font = ExtResource( 5 )
text = "CS50x Edition"
align = 1
valign = 1

[node name="TitleMenu" type="VBoxContainer" parent="Start"]
margin_left = 93.5858
margin_top = 439.243
margin_right = 292.586
margin_bottom = 623.243
theme = SubResource( 1 )
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Start/TitleMenu"]
margin_right = 199.0
margin_bottom = 45.0
size_flags_vertical = 3
text = "Start"

[node name="Options" type="Button" parent="Start/TitleMenu"]
margin_top = 69.0
margin_right = 199.0
margin_bottom = 114.0
size_flags_vertical = 3
text = "Options"

[node name="Credits" type="Button" parent="Start/TitleMenu"]
margin_top = 138.0
margin_right = 199.0
margin_bottom = 183.0
size_flags_vertical = 3
text = "Credits"

[node name="Options" type="Node2D" parent="."]
visible = false
script = ExtResource( 9 )

[node name="Back" type="Button" parent="Options"]
margin_left = 75.0
margin_top = 645.0
margin_right = 277.0
margin_bottom = 686.0
custom_fonts/font = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Options"]
margin_left = 283.746
margin_top = 80.6582
margin_right = 546.746
margin_bottom = 169.658
custom_fonts/font = ExtResource( 4 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 180.0
margin_top = 120.0
margin_right = 680.0
margin_bottom = 620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Options/Control"]
margin_left = 31.2549
margin_top = 58.8162
margin_right = 871.255
margin_bottom = 358.816
custom_constants/vseparation = 33
custom_constants/hseparation = 100
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLabel" type="Label" parent="Options/Control/GridContainer"]
margin_right = 461.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 5 )
text = "Background Music Volume"

[node name="BackgroundSlider" type="HSlider" parent="Options/Control/GridContainer"]
margin_left = 561.0
margin_right = 840.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11

[node name="HeartbeatLabel" type="Label" parent="Options/Control/GridContainer"]
margin_top = 68.0
margin_right = 461.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 5 )
text = "Heartbeat Sound Effect Volume"

[node name="HeartbeatSlider" type="HSlider" parent="Options/Control/GridContainer"]
margin_left = 561.0
margin_top = 68.0
margin_right = 840.0
margin_bottom = 84.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11

[node name="TypewriterLabel" type="Label" parent="Options/Control/GridContainer"]
margin_top = 136.0
margin_right = 461.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 5 )
text = "Typewriter Sound Effect Volume"

[node name="TypewriterSlider" type="HSlider" parent="Options/Control/GridContainer"]
margin_left = 561.0
margin_top = 136.0
margin_right = 840.0
margin_bottom = 152.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11

[node name="TypewriterSpeed" type="Label" parent="Options/Control/GridContainer"]
margin_top = 204.0
margin_right = 461.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 5 )
text = "Typewriter Speed: "

[node name="TypewriterSpeedSlider" type="HSlider" parent="Options/Control/GridContainer"]
margin_left = 561.0
margin_top = 204.0
margin_right = 840.0
margin_bottom = 220.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 11

[node name="TestButton" type="Button" parent="Options/Control"]
margin_left = 899.0
margin_top = 250.0
margin_right = 1008.0
margin_bottom = 299.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = true
text = "Test"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestText" type="RichTextLabel" parent="Options/Control"]
margin_left = 485.148
margin_top = 320.944
margin_right = 1024.15
margin_bottom = 389.944
custom_fonts/normal_font = ExtResource( 11 )
text = "This is the current typerwrtiter speed. Adjust the speed to what is the most comfortable for you."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Options/Control/TestText"]

[node name="Typewriter" type="AudioStreamPlayer" parent="Options"]
stream = ExtResource( 13 )
script = ExtResource( 12 )

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="Title2" type="Label" parent="Credits"]
margin_left = 355.0
margin_top = 81.286
margin_right = 925.0
margin_bottom = 164.286
custom_fonts/font = ExtResource( 4 )
text = "A Few Questions"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Subtitle2" type="Label" parent="Credits"]
margin_left = 480.0
margin_top = 132.0
margin_right = 1050.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 5 )
text = "CS50x Edition"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Madeby" type="Label" parent="Credits"]
margin_left = -1.0
margin_top = 207.0
margin_right = 1279.0
margin_bottom = 383.0
custom_constants/line_spacing = 3
custom_fonts/font = ExtResource( 5 )
text = "Made By Aireavix 
For CS50x
with the Godot Game Engine
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Credits"]
margin_top = 377.0
margin_right = 1280.0
margin_bottom = 455.0
custom_fonts/font = ExtResource( 5 )
text = "Version 3.5.1 Stable "
align = 1

[node name="Thanks" type="Label" parent="Credits"]
margin_left = 357.313
margin_top = 453.516
margin_right = 971.313
margin_bottom = 531.516
custom_fonts/font = ExtResource( 5 )
text = "Special Thanks To:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names1" type="Label" parent="Credits"]
margin_top = 515.0
margin_right = 1280.0
margin_bottom = 560.0
custom_fonts/font = ExtResource( 5 )
text = "David J. Malan, Derek Yu, Godot Wild Jam, Heartbeast, "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names2" type="Label" parent="Credits"]
margin_top = 582.576
margin_right = 1280.0
margin_bottom = 660.576
custom_fonts/font = ExtResource( 5 )
text = "Nuilit, Velopman, Xascoria, TryDev, Jonas1426, Sander Vanhove,  Georgyangelov"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Credits"]
margin_left = 75.0
margin_top = 645.0
margin_right = 267.0
margin_bottom = 686.0
custom_fonts/font = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" parent="." instance=ExtResource( 8 )]
visible = false

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
script = ExtResource( 10 )

[node name="Tween" type="Tween" parent="MainTheme"]

[connection signal="pressed" from="Start/TitleMenu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Start/TitleMenu/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Start/TitleMenu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="Options/Control/GridContainer/BackgroundSlider" to="." method="_on_background_value_changed"]
[connection signal="value_changed" from="Options/Control/GridContainer/HeartbeatSlider" to="." method="_on_heartbeat_value_changed"]
[connection signal="value_changed" from="Options/Control/GridContainer/TypewriterSlider" to="." method="_on_typewriter_value_changed"]
[connection signal="value_changed" from="Options/Control/GridContainer/TypewriterSpeedSlider" to="." method="_on_TypewriterSpeedSlider_value_changed"]
[connection signal="pressed" from="Options/Control/TestButton" to="Options" method="start_test"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_Back_pressed"]
[connection signal="finished" from="MainTheme" to="." method="_on_MainTheme_finished"]
